<resources>
    <string name="app_name">Kone FSM</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="create_account">Login or Sign Up</string>

    <string name="select_product">Select the desired product for this session</string>
    <string name="product1">FSM</string>
    <string name="product2">Hydro Mod</string>
    <string name="product3">Mono 500 EB Flex</string>
    <string name="begin">Continue</string>

    <string name="action_settings">Settings</string>
    <string name="invitation_title">Share KONE FSM with others</string>
    <string name="invite_action">Invite others</string>
    <string name="invitation_custom_image">http://www.kone.com/en/Images/kone-logo-76x52_tcm17-8930.png</string>
    <string name="invitation_cta">Start Now!</string>
    <string name="google_maps_key">AIzaSyCjM5aI2htMNO_ESUbnAhOc4uilrkBVOOM</string>

    <string name="training_choice_title">Select your role</string>

    <!-- supervisor goals, slide b-2 -->
    <string name="supervisor_goal_1">Proactive communication with the customer of the maintenance plan or repair quotation</string>
    <string name="supervisor_goal_2">Overview of the condition of each unit and precise matching of technician and spare parts</string>
    <string name="supervisor_goal_3">Saving time and energy on micromanagement of technician job scheduling and dispatching</string>
    <string name="supervisor_goal_4">Supervise and evaluate technician’s performance</string>

    <!-- technician goals, slide a-2 -->
    <string name="technician_goal_1">Improve communication and check in with customer</string>
    <string name="technician_goal_2">Enhanced customer satisfaction by tool simplification</string>
    <string name="technician_goal_3">Direct Access and Communication to Call Center</string>
    <string name="technician_goal_4">Faster Access to work story of the service equipment and with all supporting documentation</string>
    <string name="invitation_message">Check out the new KONE FSM app!</string>
    <string name="read_all">Make sure to read all the goals before proceeding</string>

    <!-- technician slide a-3-->
    <string name="technician_a3_title">Travel and Equipment Work</string>
    <string name="technician_a3_text">We understand that traveling and working on the equipment are the two most time consuming
activities in a service visit.  To aide with this, FSM will optimize travel path and focus on having all
the right tools and parts to work on the equipment</string>

    <!-- technician slide a-4-->
    <string name="technician_a4_title">Long travel time</string>
    <string name="technician_a4_cause1">Unnecessary detours</string>
    <string name="technician_a4_cause2">Traffic jam</string>
    <string name="technician_a4_cause3">Flat tire</string>
    <string name="technician_a4_cause4">Fail in one visit</string>
    <string name="technician_a4_mitigation1">Optimized visit schedule</string>
    <string name="technician_a4_mitigation2">Optimized route</string>
    <string name="technician_a4_mitigation3">Keep a spare in the truck</string>
    <string name="technician_a4_mitigation4">Online consulting and coaching</string>

    <!-- technician slide a-5-->
    <string name="technician_a5_title">Equipment work time</string>
    <string name="technician_a5_cause1">Missing instructions</string>
    <string name="technician_a5_cause2">No work history</string>
    <string name="technician_a5_cause3">Customer not ready</string>
    <string name="technician_a5_cause4">Long reporting &amp; request times</string>
    <string name="technician_a5_mitigation1">Instructions on the go</string>
    <string name="technician_a5_mitigation2">Online maintenance log</string>
    <string name="technician_a5_mitigation3">Online customer information</string>
    <string name="technician_a5_mitigation4">Online report &amp; request</string>

    <!-- technician slide a-6 -->
    <string name="technician_a6_title">Mobile accessible tools</string>
    <string name="technician_a6_btn1_txt">Scheduling &amp; Dispatching</string>
    <string name="technician_a6_btn2_txt">Field Mobility</string>
    <string name="technician_a6_btn3_txt">Data Management</string>
    <string name="technician_a6_btn4_txt">Call Center</string>
    <string name="technician_a6_popup1_txt">Would you rather spend your time working with equipment than spend it by
        planning your work, trying to remember what you
        needed to do next, or being stuck in
        traffic? Why not give a try at the new dispatching functionality, your personal pocket planner!</string>
    <string name="technician_a6_popup2_txt">What is the one thing you have in your pocket at times?
        FSM will be widening the set of easy to use mobile features supporting you in your daily work,
        helping to execute tasks fast and provide excellent customer service.
        Technology is here to serve you, not the other way around!</string>
    <string name="technician_a6_popup3_txt">When is the last time you have chased after a manual, circuit diagram,
        fault code list or specialist phone number, for completing troubleshooting or fixing and issue?
        You might be delighted to hear that all this information could be now found in one place,
        accessible through your mobile phone.</string>
    <string name="technician_a6_popup4_txt">Think about a first visit to the site when you have never gone before.
        What if someone had collected and offered to your disposal all the service contract details,
        service history and customer special requests? For this we are connecting our call centers with
        a completely new way of delivering information.</string>

    <!-- a7 -->
    <string name="technician_a7_title">Scheduling &amp; Dispatching</string>
    <string name="technician_a7_btn1_txt">Dynamically changing schedule</string>
    <string name="technician_a7_btn2_txt">Route optimization</string>
    <string name="technician_a7_btn3_txt">Parts availability management</string>
    <string name="technician_a7_popup1_txt">All maintenance work
    – no matter if planned of unplanned – will be automatically scheduled. Dynamic assignments will make it easy toknow where you need to be next.</string>
    <string name="technician_a7_popup2_txt">Location can be used to group scheduled visits to reduce travel time leaving more time for the actual value adding work.</string>
    <string name="technician_a7_popup3_txt">Dynamic dispatching ensures that planned service is scheduled only when spare parts are available for completing the job.</string>

    <!-- a8 -->
    <string name="technician_a8_title"></string>
    <string name="technician_a8_txt1">Who is the customer?</string>
    <string name="technician_a8_txt2">What actions on which equipment?</string>
    <string name="technician_a8_txt3">Which visit is most urgent?</string>
    <string name="technician_a8_txt4">What does the contract include?</string>

    <!-- a9 -->
    <string name="technician_a9_title">What can FSM provide?</string>
    <string name="technician_a9_txt1">Access to all customer and contract data</string>
    <string name="technician_a9_txt2">Auto prioritized daily site visit list</string>
    <string name="technician_a9_txt3">Access to all instructions for focusing preventive maintenance and troubleshooting actions to right components</string>

    <!-- a10 -->
    <string name="technician_a10_title">Who can FSM Field Mobility Benefit?</string>
    <string name="technician_a10_subtitle1">For KONE User</string>
    <string name="technician_a10_subtitle2">For Customer</string>
    <string name="technician_a10_txt1">Correct, complete and up-to-date information</string>
    <string name="technician_a10_txt2">Time Saving</string>
    <string name="technician_a10_txt3">Proactive customer communication</string>
    <string name="technician_a10_txt4">Reliable work list and on-time service</string>
    <string name="technician_a10_txt5">Fastest and most quality service for Customer Loyality</string>

    <!-- a11 -->
    <string name="technician_a11_txt1">Fast and Quality Service</string>
    <string name="technician_a11_txt2">No questionmarks for us and the customers and this means we build trust together</string>
    <string name="technician_a11_txt3">Winning With the Customer</string>

    <!-- a12 -->
    <string name="technician_a12_title">How do you look up the basic information and maintenance history of the equipment?</string>
    <string name="technician_a12_txt1">KFM?</string>
    <string name="technician_a12_txt2">Ask customer?</string>
    <string name="technician_a12_txt3">Call out record?</string>
    <string name="technician_a12_txt4">Maintenance record?</string>
    <string name="technician_a12_txt5">Manual book?</string>
    <string name="technician_a12_txt7">Incomplete or out of date information and data?</string>
    <string name="technician_a12_txt8">Waste time on collecting data/record?</string>
    <string name="technician_a12_txt9">Do not know what is the maintenance contract required?</string>


    <!-- Skip some slides -->

    <!-- Technician Quiz -->
    <string name="technician_quiz_1">How do you like FMS tells you where to go next, and your daily task list is constantly updated and prioritized?</string>
    <string name="technician_quiz_2">How do you like FMT recommends completing additional jobs on the site, if they are within the scheduling horizon?</string>
    <string name="technician_quiz_3">How do you like FMS tells you customer’s expectations and his contract coverage for this job?</string>
    <string name="technician_quiz_4">How do you like to see the full service history and what parts have been replaced?</string>
    <string name="technician_quiz_5">How do you like to see in FMT, if you have the parts in your car. If not, you can easily order them.
    For planned jobs, system will ensure that parts are available before dispatching a job.</string>
    <string name="technician_quiz_6">How do you like to receive in FMT critical documents together with other site/equipment/job related information </string>
    <string name="technician_quiz_7">Which function of FMS you expect most</string>
    <string name="technician_quiz_8">Which function of FMS you have more concern</string>
    <string name="technician_quiz_9">Please share your comments or story with colleagues</string>


    <string name="technician_quiz_78_option_1">Schedule and dispatching</string>
    <string name="technician_quiz_78_option_2">Field mobility</string>
    <string name="technician_quiz_78_option_3">Data management</string>
    <string name="technician_quiz_78_option_4">Call center</string>


    <string name="submit_results">Submit</string>


</resources>
