<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@android:color/white"
                                             android:orientation="vertical">

    <ImageView
        android:id="@+id/technicianImg"
        android:layout_width="112dp"
        android:layout_height="396dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:alpha=".85"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:transitionName="technicianCharacter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/character_blue_man_technician"/>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            tools:layout_editor_absoluteX="354dp"
            tools:layout_editor_absoluteY="775dp">

            <TextView
                android:id="@+id/q1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:paddingTop="32dp"
                android:text="@string/technician_quiz_1"/>

            <SeekBar
                android:id="@+id/q1_seekBar"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:max="10"
                android:padding="16dp"
                android:progress="5"/>

            <TextView
                android:id="@+id/q2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/technician_quiz_2"/>

            <SeekBar
                android:id="@+id/q2_seekBar"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:max="10"
                android:padding="16dp"
                android:progress="5"/>

            <TextView
                android:id="@+id/q3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/technician_quiz_3"/>

            <SeekBar
                android:id="@+id/q3_seekBar"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:max="10"
                android:padding="16dp"
                android:progress="5"/>

            <TextView
                android:id="@+id/q4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/technician_quiz_4"/>

            <SeekBar
                android:id="@+id/q4_seekBar"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:max="10"
                android:padding="16dp"
                android:progress="5"/>

            <TextView
                android:id="@+id/q5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/technician_quiz_5"/>

            <SeekBar
                android:id="@+id/q5_seekBar"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:max="10"
                android:padding="16dp"
                android:progress="5"/>

            <TextView
                android:id="@+id/q6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/technician_quiz_6"/>

            <SeekBar
                android:id="@+id/q6_seekBar"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:max="10"
                android:padding="16dp"
                android:progress="5"/>

            <TextView
                android:id="@+id/q7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/technician_quiz_7"/>

            <TextView
                android:id="@+id/q8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/technician_quiz_8"/>

            <TextView
                android:id="@+id/q9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/technician_quiz_9"/>

            <Button
                android:id="@+id/submitBtn"
                style="@style/FirebaseUI.Button.AccountChooser.EmailButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="32dp"
                android:drawableLeft="@drawable/com_facebook_button_like_icon_selected"
                android:text="@string/submit_results"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="0dp"/>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>