<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ImageButton
        android:id="@+id/nextBtn"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:scaleType="fitCenter"
        android:text="Next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/equip_c_arrow_right"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <ImageView
        android:id="@+id/technicianImg"
        android:layout_width="147dp"
        android:layout_height="219dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:transitionName="technicianCharacter"
        app:srcCompat="@drawable/character_blue_man_technician"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/technician_a10_kone_txt1"
        android:layout_width="176dp"
        android:layout_height="64dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryDark"
        android:padding="4dp"
        android:text="@string/technician_a10_txt1"
        android:textAlignment="textStart"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/technician_a10_kone_txt2"/>

    <TextView
        android:id="@+id/technician_a10_kone_txt2"
        android:layout_width="176dp"
        android:layout_height="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@color/colorPrimary"
        android:padding="4dp"
        android:text="@string/technician_a10_txt2"
        android:textAlignment="textStart"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/technician_a10_koneUser"/>

    <TextView
        android:id="@+id/technician_a10_kone_txt3"
        android:layout_width="176dp"
        android:layout_height="64dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryDark"
        android:padding="4dp"
        android:text="@string/technician_a10_txt3"
        android:textAlignment="textStart"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/technician_a10_kone_txt1"/>

    <TextView
        android:id="@+id/technician_a10_customer_txt1"
        android:layout_width="176dp"
        android:layout_height="64dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="33dp"
        android:background="@color/colorPrimary"
        android:padding="4dp"
        android:text="@string/technician_a10_txt4"
        android:textAlignment="textStart"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/technician_a10_customer"/>

    <TextView
        android:id="@+id/technician_a10_customer_txt2"
        android:layout_width="176dp"
        android:layout_height="64dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryDark"
        android:padding="4dp"
        android:text="@string/technician_a10_txt5"
        android:textAlignment="textStart"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/technician_a10_customer_txt1"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/technician_a10_title"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/technician_a10_koneUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="7dp"
        android:background="@android:color/holo_blue_light"
        android:padding="8dp"
        android:text="@string/technician_a10_subtitle1"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"/>

    <TextView
        android:id="@+id/technician_a10_customer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_blue_light"
        android:padding="8dp"
        android:text="@string/technician_a10_subtitle2"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"/>

</android.support.constraint.ConstraintLayout>