<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ImageButton
        android:id="@+id/nextBtn"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:scaleType="fitCenter"
        android:text="Next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/equip_c_arrow_right"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <ImageView
        android:id="@+id/technicianImg"
        android:layout_width="89dp"
        android:layout_height="152dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:transitionName="technicianCharacter"
        app:srcCompat="@drawable/character_blue_man_technician"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        />

    <TextView
        android:id="@+id/technician_cause1_txt"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:background="@color/colorPrimaryDark"
        android:padding="4dp"
        android:text="@string/technician_a5_cause1"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"/>

    <TextView
        android:id="@+id/mitigation2_txt"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:background="@color/colorPrimary"
        android:padding="4dp"
        android:text="@string/technician_a5_mitigation2"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/technician_cause2_txt"/>

    <TextView
        android:id="@+id/mitigation3_txt"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:background="@color/colorPrimary"
        android:padding="4dp"
        android:text="@string/technician_a5_mitigation3"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/technician_cause3_txt"/>

    <TextView
        android:id="@+id/mitigation4_txt"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:background="@color/colorPrimary"
        android:padding="4dp"
        android:text="@string/technician_a5_mitigation4"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/technician_cause4_txt"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="32dp"/>

    <TextView
        android:id="@+id/mitigation1_txt"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:background="@color/colorPrimary"
        android:padding="4dp"
        android:text="@string/technician_a5_mitigation1"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/technician_cause1_txt"/>

    <TextView
        android:id="@+id/technician_cause2_txt"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryDark"
        android:padding="4dp"
        android:text="@string/technician_a5_cause2"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mitigation1_txt"/>

    <TextView
        android:id="@+id/technician_cause3_txt"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryDark"
        android:padding="4dp"
        android:text="@string/technician_a5_cause3"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mitigation2_txt"/>

    <TextView
        android:id="@+id/technician_cause4_txt"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:background="@color/colorPrimaryDark"
        android:padding="4dp"
        android:text="@string/technician_a5_cause4"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/mitigation3_txt"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/technician_a5_title"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        app:layout_constraintGuide_begin="20dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="20dp"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline2"
        app:layout_constraintGuide_begin="20dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="20dp"/>

</android.support.constraint.ConstraintLayout>